--- a/XamarinFormsSandbox/XamarinFormsSandbox/XamarinFormsSandbox.csproj
+++ b/XamarinFormsSandbox/XamarinFormsSandbox/XamarinFormsSandbox.csproj
@@ -14,4 +14,16 @@
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991537" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="OpacitySlider.xaml.cs">
+      <DependentUpon>OpacitySlider.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="HomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
